--- a/views/footer.html
+++ b/views/footer.html
@@ -83,7 +83,7 @@
                     </div>
                     <div class="copyright brand-brown-dark letter-space">
                        <p>Copyright &copy; Selfcare Support Pvt. Ltd.</p>
-                       <p>All Rights Reserved | <a href="" class="">Privacy Policy</a> | T&amp;C</p>
+                       <p>All Rights Reserved | <a href="" class="brand-brown-dark">Privacy Policy</a> | T&amp;C</p>
                     </div>
                 </div>
             </div>
