--- a/views/content/contactus.html
+++ b/views/content/contactus.html
@@ -6,6 +6,13 @@
 
   <div class="contact-location">
     <div class="container">
+
+      <div class="row">
+        <div class="clinic text-center">
+          <span class="brand-primary font-semibold">Clinic Timings (9:30am to 6pm)</span>
+        </div>
+      </div>
+
       <div class="row">
         <div class="col-md-4 col-sm-5">
           <div class="mumbai">
