--- a/views/content/weightmanagement.html
+++ b/views/content/weightmanagement.html
@@ -321,7 +321,7 @@
               <div class="row">
                 <div class="col-md-6 col-sm-6">
                   <div class="story-video">
-                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/dnmzOqhu62k" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="100%" height="300" src="https://www.youtube.com/embed/dnmzOqhu62k" frameborder="0" allowfullscreen></iframe>
                   </div>
                 </div>
                 <div class="col-md-6 col-sm-6">
