--- a/views/footer.html
+++ b/views/footer.html
@@ -65,7 +65,7 @@
                         <p>Receive monthly tips on the healthiest foods and excercizes, along with the latest plans and offers.</p>
                     </div>
                     <div class="mail">
-                        <form action="" class="form-inline">
+                        <form class="form-inline" name="subscribeForm">
                             <div class="form-group">
                                 <input type="email" class="form-control email" placeholder="EMAIL">
                                 <button type="submit" class="form-control btn-submit"><span><i class="fa fa-chevron-right brand-primary"></i></span></button>
