--- a/views/modal/login.html
+++ b/views/modal/login.html
@@ -83,13 +83,16 @@
                     <div class="row">
                         <div class="col-md-offset-3 col-md-6">
                             <div class="form-group">
-                                <input type="email" name="email" ng-model="login.email" class="form-control" placeholder="Email">
+                                <input type="email" name="email" ng-model="login.email" class="form-control" required placeholder="Email">
+                            </div>
+                            <div class="text-center" ng-show="loginForm.$invalid && loginForm.email.$touched " role="alert">
+                                Please enter email
                             </div>
                             <div class="form-group">
-                                <input type="password" name="password" ng-model="login.password" class="form-control" placeholder="Password">
+                                <input type="password" name="password" ng-model="login.password" class="form-control" required placeholder="Password">
                             </div>
-                            <div class="text-center" ng-show="loginForm.$invalid && loginForm.email.$touched && loginForm.password.$touched" role="alert">
-                                Please enter all details
+                            <div class="text-center" ng-show="loginForm.$invalid && loginForm.password.$touched" role="alert">
+                                Please enter password
                             </div>
                             <div class="text-center submit">
                                 <button class="text-uppercase btn btn-primary" type="submit">Sign in</button>
