--- a/views/footer.html
+++ b/views/footer.html
@@ -67,8 +67,11 @@
                     <div class="mail">
                         <form class="form-inline" name="subscribeForm">
                             <div class="form-group">
-                                <input type="email" class="form-control email" placeholder="EMAIL">
+                                <input type="email" name="email" required ng-model="email" class="form-control email" placeholder="EMAIL">
                                 <button type="submit" class="form-control btn-submit"><span><i class="fa fa-chevron-right brand-primary"></i></span></button>
+                            </div>
+                            <div class="" ng-show="subscribeForm.$invalid && subscribeForm.email.$dirty" role="alert">
+                              Please enter an email
                             </div>
                         </form>
                     </div>
