--- a/views/modal/login.html
+++ b/views/modal/login.html
@@ -95,7 +95,7 @@
                                 Please enter password
                             </div>
                             <div class="text-center submit">
-                                <button class="text-uppercase btn btn-primary" type="submit">Sign in</button>
+                                <button class="text-uppercase btn btn-primary" type="submit" ng-click="doLogin(login,loginForm)">Sign in</button>
                             </div>
                         </div>
                     </div>
