--- a/views/content/home.html
+++ b/views/content/home.html
@@ -3,11 +3,11 @@
     <li>
       <div class="slide-holder relate">
         <img ng-src="{{slide.img | serverimage}}">
-        <!-- <div class="slider-info get-center text-center">
+        <div class="slider-info get-center text-center">
           <h2 class="text-uppercase brand-primary font-semibold">{{slide.title}}</h2>
           <p>{{slide.description}}</p>
           <button class="text-uppercase btn btn-primary" type="button">Know more</button>
-        </div> -->
+        </div>
       </div>
     </li>
   </flex-slider>
