--- a/views/content/team.html
+++ b/views/content/team.html
@@ -74,7 +74,7 @@
         <div class="row">
           <div class="col-md-2 col-sm-3">
             <div class="member-image">
-              <img src="" alt="" class="img-responsive">
+              <img src="img/team/nidhi.jpg" alt="" class="img-responsive">
             </div>
           </div>
 
