--- a/views/content/successstories.html
+++ b/views/content/successstories.html
@@ -72,7 +72,10 @@
                     <div class="row">
                       <div class="col-md-6">
                         <!-- youtube video -->
-                        <iframe width="100%" height="300" src="https://www.youtube.com/embed/dnmzOqhu62k" frameborder="0" allowfullscreen></iframe>
+                        <!-- <iframe width="100%" height="300" src="https://www.youtube.com/embed/dnmzOqhu62k" frameborder="0" allowfullscreen></iframe> -->
+                        <a class="various fancybox.iframe" fancybox href="{{view.link}}">
+                          <img ng-src="{{view.image}}" alt="" class="img-responsive" />
+                        </a>
                       </div>
 
                       <div class="col-md-6">
@@ -101,7 +104,10 @@
                     <div class="row">
                       <div class="col-md-6 hidden-md hidden-lg">
                         <!-- youtube video -->
-                        <iframe width="100%" height="300" src="https://www.youtube.com/embed/dnmzOqhu62k" frameborder="0" allowfullscreen></iframe>
+                        <!-- <iframe width="100%" height="300" src="https://www.youtube.com/embed/dnmzOqhu62k" frameborder="0" allowfullscreen></iframe> -->
+                        <a class="various fancybox.iframe" fancybox href="{{view.link}}">
+                          <img ng-src="{{view.image}}" alt="" class="img-responsive" />
+                        </a>
                       </div>
 
                       <div class="col-md-6">
@@ -120,7 +126,10 @@
 
                       <div class="col-md-6 hidden-sm hidden-xs">
                         <!-- youtube video -->
-                        <iframe width="100%" height="300" src="https://www.youtube.com/embed/dnmzOqhu62k" frameborder="0" allowfullscreen></iframe>
+                        <!-- <iframe width="100%" height="300" src="https://www.youtube.com/embed/dnmzOqhu62k" frameborder="0" allowfullscreen></iframe> -->
+                        <a class="various fancybox.iframe" fancybox href="{{view.link}}">
+                          <img ng-src="{{view.image}}" alt="" class="img-responsive" />
+                        </a>
                       </div>
                     </div>
                   </div>
