--- a/views/content/home.html
+++ b/views/content/home.html
@@ -13,6 +13,9 @@
   </flex-slider>
 </div>
 <div class="container">
+  <div class="get-center" ng-if="alerts != {}">
+      <uib-alert type="{{alert.type}}" close="closeAlert()" class="text-center" dismiss-on-timeout="5000">{{alert.msg}}</uib-alert>
+  </div>
   <div class="health-design brand-brown-bg relate">
     <h4 class="text-capitalize inline-block font-light">Health design by suman agarwal</h4>
     <div class="img-holder get-round">
@@ -251,12 +254,12 @@
               <div class="custom-select">
                 <select name="category" id="" ng-model="asksuman.category" required class="form-control text-bold">
                   <option value="">Choose a Category</option>
-                  <option value="">Weight Loss</option>
-                  <option value="">Weight Gain</option>
-                  <option value="">Diet</option>
-                  <option value="">Health and Immunity</option>
-                  <option value="">Ailment Control</option>
-                  <option value="">General</option>
+                  <option value="Weight Loss">Weight Loss</option>
+                  <option value="Weight Gain">Weight Gain</option>
+                  <option value="Diet">Diet</option>
+                  <option value="Health and Immunity">Health and Immunity</option>
+                  <option value="Ailment Control">Ailment Control</option>
+                  <option value="General">General</option>
                 </select>
                 <span class="select-caret"></span>
               </div>
@@ -281,8 +284,11 @@
           <div class="text-center" ng-show="asksumanForm.$invalid && asksumanForm.category.$touched && asksumanForm.name.$touched && asksumanForm.email.$touched && asksumanForm.question.$touched" alert="role">
             Please enter all details
           </div>
+          <div class="text-center" ng-show="submitted" alert="role">
+            Your queries have been sent.
+          </div>
           <div class="text-right btn-center">
-            <button class="text-uppercase btn btn-primary btn-more" type="submit">Submit</button>
+            <button class="text-uppercase btn btn-primary btn-more" type="submit" ng-click="askSumanSubmit(asksuman,asksumanForm)">Submit</button>
           </div>
         </div>
       </div>
