--- a/views/content/successstories.html
+++ b/views/content/successstories.html
@@ -80,14 +80,16 @@
 
                       <div class="col-md-6">
                         <div class="inner-view-left">
-                          <div class="get-round pull-right view-right">
+                          <div class="get-round pull-right view-left">
                           <span class="text-uppercase brand-brown-dark-bg lost">Lost</span>
                           <p>
                             <span class="weight-number inline-block font-vista">5</span>kgs
                           </p>
                         </div>
+                        <div class="view-title text-left">
                           <span class="name text-left brand-brown-dark font-semibold">{{view.name}}</span><br>
                           <span class="location text-left white">{{view.location}}</span>
+                        </div>
                         </div>
                         <div class="view-detail">
                           <span class="title text-justify brand-brown-dark">{{view.title}}</span>
@@ -116,8 +118,10 @@
                             <span class="lost text-uppercase brand-brown-dark-bg">Lost</span>
                             <p class="font-vista"><span class="weight-number">{{view.weight}}</span>kgs</p>
                           </div>
-                          <span class="name text-right brand-brown-dark font-semibold">{{view.name}}</span><br>
-                          <span class="location text-right white">{{view.location}}</span>
+                          <div class="view-title-right text-right">
+                            <span class="name text-right brand-brown-dark font-semibold">{{view.name}}</span><br>
+                            <span class="location text-right white">{{view.location}}</span>
+                          </div>
                         </div>
                         <div class="view-detail">
                           <span class="title text-justify brand-brown-dark">{{view.title}}</span>
