--- a/views/content/aboutus.html
+++ b/views/content/aboutus.html
@@ -20,7 +20,10 @@
           <div class="col-md-5 col-sm-12">
             <div class="embed-youtube">
               <!-- Youtube video -->
-              <iframe width="100%" height="300" src="https://www.youtube.com/embed/nSQJuONAvaw" frameborder="0" allowfullscreen></iframe>
+              <!-- <iframe width="100%" height="300" src="https://www.youtube.com/embed/nSQJuONAvaw" frameborder="0" allowfullscreen></iframe> -->
+              <a class="various fancybox.iframe" fancybox href="https://www.youtube.com/embed/nSQJuONAvaw?autoplay=1">
+                <img src="img/videos/suman.jpg" alt="" class="img-responsive" />
+              </a>
             </div>
           </div>
           <div class="col-md-7 col-sm-12">
