--- a/views/footer.html
+++ b/views/footer.html
@@ -54,7 +54,7 @@
                     <div class="submenu text-uppercase">
                         <ul>
                             <li><a href="" title="Calorie Meter">CALORIE METER</a></li>
-                            <li> <a href="#/recipes" title="Recipes">RECIPES</a></li>
+                            <li> <a href="" title="Recipes">RECIPES</a></li>
                         </ul>
                     </div>
                 </div>
@@ -65,10 +65,10 @@
                         <p>Receive monthly tips on the healthiest foods and excercizes, along with the latest plans and offers.</p>
                     </div>
                     <div class="mail">
-                        <form class="form-inline" name="subscribeForm">
+                        <form class="form-inline" name="subscribeForm"  ng-submit="subscribe(subscribe,subscribeForm)">
                             <div class="form-group">
                                 <input type="email" name="email" required ng-model="subscribe.email" class="form-control email" placeholder="EMAIL">
-                                <button type="submit" class="form-control btn-submit"><span><i class="fa fa-chevron-right brand-primary" ng-click="subscribe(subscribe,subscribeForm)"></i></span></button>
+                                <button type="submit" class="form-control btn-submit"><span><i class="fa fa-chevron-right brand-primary"></i></span></button>
                             </div>
                             <div class="" ng-show="subscribeForm.$invalid && subscribeForm.email.$dirty" role="alert">
                               Please enter an email
