--- a/views/content/home.html
+++ b/views/content/home.html
@@ -2,12 +2,14 @@
   <flex-slider flex-slide="slide in homeslider track by $index" animation="slide" class="carousel">
     <li>
       <div class="slide-holder relate">
-        <img ng-src="{{slide.img | serverimage}}">
-        <div class="slider-info get-center text-center">
+        <a href="{{slide.link}}">
+          <img ng-src="{{slide.img | serverimage}}">
+        </a>
+        <!-- <div class="slider-info get-center text-center">
           <h2 class="text-uppercase brand-primary font-semibold">{{slide.title}}</h2>
           <p>{{slide.description}}</p>
           <button class="text-uppercase btn btn-primary" type="button">Know more</button>
-        </div>
+        </div> -->
       </div>
     </li>
   </flex-slider>
